plugins {
	id 'java'
}

sourceSets.main.java.srcDir('src')

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

	//Downloads the server-release JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
	ivy {
		url 'https://github.com/'
		patternLayout { artifact '/[organisation]/[module]/releases/download/[revision]/server-release.jar' }
		metadataSources { artifact() }
	}

	//"Latest" option to depend on BE builds.
	ivy {
		url 'https://github.com/'
		patternLayout { artifact '/[organisation]/[module]/releases/download/master/[revision].jar' }
		metadataSources { artifact() }
	}

	//Do the same with jabel
	ivy {
		url 'https://github.com/'
		patternLayout { artifact '/[organisation]/[module]/releases/download/[revision]/jabel.jar' }
		metadataSources { artifact() }
	}
}

ext {
	isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
	sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
}

dependencies {
	implementation "org.ow2.asm:asm:9.6"
	implementation "org.ow2.asm:asm-commons:9.6"

	implementation "Anuken:Mindustry:$mindustryVersion"
}

java {
	targetCompatibility = JavaVersion.VERSION_25
	sourceCompatibility = JavaVersion.VERSION_25
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"

	options.compilerArgs.addAll([
			"--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
			"--add-exports", "java.base/jdk.internal.module=ALL-UNNAMED",
			"--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED",
			"--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
	])
}

tasks.register('jarAndroid') {
	dependsOn "jar"

	doLast {
		if (!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")

		def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find { f -> new File(f, "android.jar").exists() }

		if (!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")

		//collect dependencies needed for desugaring
		def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect { "--classpath $it.path" }.join(" ")

		def d8 = isWindows ? "d8.bat" : "d8"

		//dex and desugar files - this requires d8 in your PATH
		"$d8 $dependencies --min-api 36 --output ${project.name}Android.jar ${project.name}Desktop.jar"
				.execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
	}
}

jar {
	archiveFileName = "${project.name}Desktop.jar"
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('deploy', Jar) {
	dependsOn jarAndroid
	dependsOn jar
	archiveFileName = "${project.name}.jar"

	from { [zipTree("$buildDir/libs/${project.name}Desktop.jar"), zipTree("$buildDir/libs/${project.name}Android.jar")] }

	doLast {
		delete {
			delete "$buildDir/libs/${project.name}Desktop.jar"
			delete "$buildDir/libs/${project.name}Android.jar"
		}
	}
}
